--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -4,7 +4,8 @@
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
-    background-color: #f9f9f9;
+
+    background-color: var(--tg-theme-background-color);
 }
 
 .product-item h2 {
