--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,5 @@ body{
 }
 
 .App {
-  text-align: center;
-  background: linear-gradient(to right, #ff7e5f, #feb47b); /* Градиентный фон */
-  min-height: 100vh; /* Чтобы фон занимал всю высоту окна */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
 }
