--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,5 @@ body{
 }
 
 .App {
-  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  background: linear-gradient(to bottom, #00545B, #06958E);
 }
