--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
-}
-body{
-  background: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  font-family: "Montserrat";
 }
 
 .App {
