--- a/src/components/Products list/ProductsList.css
+++ b/src/components/Products list/ProductsList.css
@@ -9,7 +9,6 @@
 .product-list h1 {
     font-size: 24px;
     margin-bottom: 20px;
-    color: #dddddd;
 }
 
 .product-list ul {
@@ -24,6 +23,10 @@
     flex: 1 1 calc(50% - 10px); /* Два объекта в строке с отступом */
     margin-bottom: 20px;
     box-sizing: border-box;
+}
+
+.product-list li:nth-child(odd) {
+    margin-right: 20px; /* Добавляем отступ справа для нечетных элементов */
 }
 
 .product-item {
