--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,11 +1,8 @@
-/* src/Product.css */
 .product-item {
     border: 1px solid #ddd;
     padding: 10px;
-    margin-bottom: 10px;
     border-radius: 5px;
-
-    background-color: var(--tg-theme-background-color);
+    background-color: #f9f9f9;
 }
 
 .product-item h2 {
