--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -15,3 +15,14 @@
     font-size: 16px;
     color: #555;
 }
+
+.cards {
+    position: relative;
+}
+
+.card__link:after {
+    content: '';
+    position: absolute;
+    inset: 0;
+}
+
