--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -11,27 +11,20 @@
 .product-item h2 {
     font-size: 18px;
     margin: 0;
+    text-decoration: none;
 }
 
 .product-item h2:after {
     content: '';
+    position: absolute;
     inset: 0;
 }
 
 .product-item p {
     font-size: 16px;
     color: #555;
+    text-decoration: none;
 
 }
 
-.cards {
-}
-
-.card__link:after {
-
-}
-
-.card__desc,
-.card__buy {
-}
 
