--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -8,19 +8,19 @@
     background-color: #f9f9f9;
 }
 
-.product-item h2 {
+.text {
     font-size: 18px;
     margin: 0;
     text-decoration: none;
 }
 
-.product-item h2:after {
+.text:after {
     content: '';
     position: absolute;
     inset: 0;
 }
 
-.product-item p {
+.text-desc {
     font-size: 16px;
     color: #555;
     text-decoration: none;
