--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -6,3 +6,22 @@
     color: #dddddd;
     font-weight: bold;
 }
+
+/* src/ProductDetail.css */
+
+.back_button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.back_button:hover {
+    background-color: #0056b3;
+}
+
