--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -25,3 +25,63 @@
     background-color: #0056b3;
 }
 
+/* src/ProductDetail.css */
+
+.product-detail-container {
+    display: flex;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.back-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    margin-right: 20px;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 20px; /* Увеличиваем размер шрифта для стрелки */
+}
+
+.back-button-container:hover {
+    background-color: #0056b3;
+}
+
+.product-info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.photo {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+
+.product-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+.product-text-container h2 {
+    font-size: 24px;
+    margin: 0;
+}
+
+.product-text-container p {
+    font-size: 18px;
+    margin: 5px 0 0;
+}
+
+.product-description {
+    font-size: 16px;
+    margin-top: 20px;
+}
