--- a/src/components/ProductDetail/ProductDetail.css
+++ b/src/components/ProductDetail/ProductDetail.css
@@ -25,8 +25,6 @@
     background-color: #0056b3;
 }
 
-/* src/ProductDetail.css */
-
 .product-detail-container {
     display: flex;
     align-items: flex-start;
@@ -69,6 +67,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 20px;
+    color: #dddddd;
 }
 
 .product-text-container h2 {
@@ -84,4 +83,5 @@
 .product-description {
     font-size: 16px;
     margin-top: 20px;
+    color: #dddddd;
 }
